fixing subheaders font-size on small screens

--- a/responsive.css
+++ b/responsive.css
@@ -33,6 +33,10 @@
   body{
     overflow-x: hidden;
   }
+
+  .subheader {
+    font-size: 18px;
+  }
   
   #nav {
     display: none;
